# dlrs-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  logging.conf  main.py  pyproject.toml
src/: __init__.py  config.py  events.py  main.py  routes.py  run.py  settings.py
src/app/: __init__.py  main.py  routes.py  settings.py
src/app/services/: __init__.py  logger.py
src/auth/: models.py  routes.py
src/services/: logger.py
src/tests/: test_main.py
tests/: conftest.py  test_auth.py  test_main.py
